--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,16 @@
   --animate-fade-in-delay-4: fade-in 0.7s ease-out 0.8s forwards;
   --animate-meteor: meteor 5s linear infinite;
   --animate-handshake: shake 4s  infinite;
- 
+  --animate-auto-scroll: autoScroll 15s linear infinite alternate;
+
+@keyframes autoScroll {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(calc(-100% + 460px));
+  }
+}
   @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
